kubernetes/goupfile/deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose --file docker-compose.yml convert
    kompose.version: 1.17.0 (a74acad)
  creationTimestamp: null
  labels:
    io.kompose.service: goupfile
  name: goupfile
spec:
  replicas: 1
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        io.kompose.service: goupfile
    spec:
      containers:
      - image: gcr.io/goupfile/goupfile:latest
        name: goupfile
        ports:
        - containerPort: 8080
        resources: {}
      restartPolicy: Always
status: {}
