kubernetes/goupfile/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: goupfile
  annotations:
    kubernetes.io/ingress.allow-http: "false"
    kubernetes.io/ingress.global-static-ip-name: goupfile
    networking.gke.io/managed-certificates: goupfile-cert
spec:
  backend:
    serviceName: goupfile
servicePort: 80
